Fixing z-index for cover in Project Section.

--- a/src/components/project-section/project-section.module.css
+++ b/src/components/project-section/project-section.module.css
@@ -80,7 +80,7 @@
 /* cover */
 
 .cover {
-    z-index: 2;
+    z-index: var(--z-media);
 }
 
 .cover>div {
